--- a/app/src/main/res/layout/mainscreen.xml
+++ b/app/src/main/res/layout/mainscreen.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/swiperefresh"
         tools:context=".mainscreen.MainActivity">
     <ScrollView
             android:layout_width="0dp"
@@ -33,7 +34,8 @@
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintStart_toStartOf="parent" tools:layout_editor_absoluteY="50dp"/>
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:layout_editor_absoluteY="50dp"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -69,6 +71,7 @@
                         app:layout_constraintEnd_toStartOf="@+id/forecastSummaryTxt"
                         app:layout_constraintHorizontal_bias="1.0"
                         android:layout_marginEnd="30dp"/>
+
                 <TextView
                         android:text="Clear Night"
                         android:layout_width="wrap_content"
@@ -149,7 +152,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/uvIndexLbl"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:id="@+id/uvIndexLbl"
                                 android:layout_marginTop="8dp"
                                 app:layout_constraintTop_toBottomOf="@+id/uvImageView"/>
                         <TextView
@@ -398,4 +402,4 @@
         </android.support.constraint.ConstraintLayout>
 
     </ScrollView>
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
