fix UI , add no action bar

--- a/app/src/main/res/layout/mainscreen.xml
+++ b/app/src/main/res/layout/mainscreen.xml
@@ -32,6 +32,7 @@
                     android:textSize="30sp"
                     android:text="Neutral Bay"
                     android:layout_marginEnd="8dp"
+                    android:textColor="@color/text"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
                     android:textSize="17sp"
                     android:text="Monday, 10:11 PM"
                     android:layout_marginEnd="8dp"
+                    android:textColor="@color/text"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -56,14 +58,14 @@
                     android:layout_marginEnd="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="40dp"
                     app:layout_constraintTop_toBottomOf="@+id/localityTimeTxt"
                     android:id="@+id/constraintLayout">
 
                 <ImageView
                         android:src="@drawable/clear_day_icon"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
+                        android:layout_width="85dp"
+                        android:layout_height="85dp"
                         android:id="@+id/forecastIcon"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -77,8 +79,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/forecastSummaryTxt"
-                        android:textSize="25sp"
+                        android:textSize="30sp"
                         android:textAlignment="textStart"
+                        android:textColor="@color/text"
                         android:layout_marginTop="8dp"
                         app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginBottom="8dp"
@@ -99,8 +102,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/forecastCurrentTemperatureTxt"
-                        android:textSize="80sp"
+                        android:textSize="100sp"
                         android:text="19°"
+                        android:textColor="@color/text"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -112,7 +116,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/detailsLayout"
-                    android:layout_marginTop="80dp"
+                    android:layout_marginTop="20dp"
                     app:layout_constraintTop_toBottomOf="@+id/currentMaxMinTempLayout"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
