--- a/app/src/main/res/layout/dailycard.xml
+++ b/app/src/main/res/layout/dailycard.xml
@@ -3,56 +3,49 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
-              android:layout_marginTop="10dp"
-              android:orientation="vertical">
-
-
-    <RelativeLayout
-            android:id="@+id/rl_movie_thumb"
-            android:layout_width="100dp"
-            android:layout_height="150dp">
-
-        <ImageView
-                android:id="@+id/iv_profile_pic"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:scaleType="fitXY"/>
-
-    </RelativeLayout>
+              android:layout_marginTop="10dp">
+    <ImageView
+            android:id="@+id/iv_day"
+            android:src="@drawable/clear_day_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="centerInside"/>
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-                android:orientation="horizontal"
+            android:layout_height="wrap_content">
+        <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:textColor="@color/text"
+                android:id="@+id/tv_summary"
+                android:layout_weight="1"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_time"
+                android:textColor="@color/text"
+                android:layout_weight="1"/>
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tv_temperature_max"
+                    android:textColor="@color/text"
+                    android:layout_weight="1"/>
             <TextView
                     android:id="@+id/tv_temperature_min"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:typeface="sans" android:layout_weight="0.5"/>
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/tv_temperature_max"
-                    android:layout_weight="0.5"/>
+                    android:textColor="@color/text"
+                    android:typeface="sans"
+                    android:layout_weight="1"/>
         </LinearLayout>
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:id="@+id/tv_time"
-        />
-        <TextView
-                android:id="@+id/tv_summary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:paddingTop="10dp"
-                android:textSize="13dp"
-                android:typeface="sans"/>
     </LinearLayout>
 
 
