--- a/app/src/main/res/layout/dailycard.xml
+++ b/app/src/main/res/layout/dailycard.xml
@@ -3,6 +3,7 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
+              android:gravity="center_vertical"
               android:layout_marginTop="10dp">
     <ImageView
             android:id="@+id/iv_day"
@@ -17,15 +18,19 @@
             android:layout_height="wrap_content">
         <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_time"
+               android:gravity="center"
+                android:textSize="20sp"
                 android:textColor="@color/text"
-                android:id="@+id/tv_summary"
                 android:layout_weight="1"/>
         <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tv_time"
+                android:layout_height="match_parent"
+                android:textSize="10sp"
+                android:gravity="center"
                 android:textColor="@color/text"
+                android:id="@+id/tv_summary"
                 android:layout_weight="1"/>
         <LinearLayout
                 android:layout_width="match_parent"
@@ -34,8 +39,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tv_temperature_max"
+                    android:gravity="right"
+                    android:textAlignment="gravity"
                     android:textColor="@color/text"
                     android:layout_weight="1"/>
+            <TextView
+                    android:text="-"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView"
+                    android:textColor="@color/text"
+                    android:gravity="center"
+                    android:layout_weight="0.1"/>
             <TextView
                     android:id="@+id/tv_temperature_min"
                     android:layout_width="wrap_content"
