--- a/app/src/main/res/layout/dailycard.xml
+++ b/app/src/main/res/layout/dailycard.xml
@@ -7,9 +7,8 @@
               android:layout_marginTop="10dp">
     <ImageView
             android:id="@+id/iv_day"
-            android:src="@drawable/clear_day_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerInside"/>
     <LinearLayout
