--- a/app/src/main/res/layout/mainscreen.xml
+++ b/app/src/main/res/layout/mainscreen.xml
@@ -25,9 +25,11 @@
                 android:layout_height="match_parent"
                 android:id="@+id/forecastLayout">
 
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/query"/>
+            <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_mylocation"
+                    android:id="@+id/img" app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="362dp" />
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
